example/kube/mailcatcher/deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mailcatcher
  namespace: authelia
  labels:
    app: mailcatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailcatcher
  template:
    metadata:
      labels:
        app: mailcatcher
    spec:
      containers:
      - name: mailcatcher
        image: schickling/mailcatcher
        ports:
        - containerPort: 1025
        - containerPort: 1080
