example/kube/mailcatcher/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mailcatcher-service
  namespace: authelia
spec:
  selector:
    app: mailcatcher
  ports:
  - protocol: TCP
    port: 1080
    name: ui
  - protocol: TCP
    port: 1025
    name: smtp
