example/kube/mailcatcher/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailcatcher-ingress
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: mail.kube.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mailcatcher-service
          servicePort: 1080
